# AndroidIconRecognition

./: README.md
AndroidIconRecognition/app/: CMakeLists.txt  build.gradle
AndroidIconRecognition/app/src/androidTest/java/com/rosie/androidiconrecognition/: ExampleInstrumentedTest.java
AndroidIconRecognition/app/src/main/: AndroidManifest.xml
AndroidIconRecognition/app/src/main/cpp/: native-lib.cpp
AndroidIconRecognition/app/src/main/java/com/rosie/androidiconrecognition/: MainActivity.java
AndroidIconRecognition/app/src/main/res/layout/: activity_main.xml
AndroidIconRecognition/app/src/main/res/values/: strings.xml
AndroidIconRecognition/app/src/test/java/com/rosie/androidiconrecognition/: ExampleUnitTest.java
AndroidIconRecognition/gradle/wrapper/: gradle-wrapper.properties
AndroidIconRecognition/openCVLibrary320/: build.gradle
